--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,24 @@
 {
   "extends": "astro/tsconfigs/strict",
-  "include": [".astro/types.d.ts", "**/*"],
-  "exclude": ["dist"]
+  "compilerOptions": {
+ /*    "jsx": "react-jsx",
+    "jsxImportSource": "react", */
+    "baseUrl": ".",
+    "paths": {
+      "@/*": ["src/*"],
+      "/pkg/*": ["./public/pkg/*"]
+    },
+    "jsx": "react-jsx",
+    "jsxImportSource": "react",
+    "types": ["node", "astro/client"]
+  },
+  "include": [
+    ".astro/types.d.ts",
+    "src/**/*",
+  ],
+  "exclude": [
+    "dist",
+    "node_modules",
+    "public"
+  ]
 }
