--- a/package.json
+++ b/package.json
@@ -20,5 +20,8 @@
     "nanostores": "^1.0.1",
     "react": "^19.2.0",
     "react-dom": "^19.2.0"
+  },
+  "devDependencies": {
+    "vite-tsconfig-paths": "^5.1.4"
   }
 }
