removed some unused code, seemed to be slightly slower in rendering but same quality

--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,23 @@ pnpm-debug.log*
 #mcp
 .mcp_settings.json
 .mcp_settings/
+
+# Logs
+logs
+*.log
+dev-debug.log
+# Dependency directories
+# Environment variables
+# Editor directories and files
+.idea
+.vscode
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
+# OS specific
+
+# Task files
+# tasks.json
+# tasks/ 
