--- a/.github/workflows/astro.yml
+++ b/.github/workflows/astro.yml
@@ -21,9 +21,13 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+      - name: Install wasm-pack
+        uses: jetli/wasm-pack-action@v0.4.0
+        with:
+          version: 'latest'
       - name: Install, build, and upload your site
         uses: withastro/action@v2
-
+      
   deploy:
     environment:
       name: github-pages
