--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "npm run build:wasm && astro dev",
     "build": "npm run build:wasm && astro build",
-    "build:wasm": "wasm-pack build --target web --out-dir ../public/pkg --no-typescript src",
+    "build:wasm": "wasm-pack build --verbose --target web --out-dir ../public/pkg --no-typescript src",
     "preview": "astro preview",
     "astro": "astro"
   },
