--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -1,5 +1,5 @@
 {
-  "name": "3D",
+  "name": "world-github-io",
   "compatibility_date": "2025-12-17", // Update to the day you deploy
   "assets": {
     "directory": "./dist"
