--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-dom": "^19.2.0"
   },
   "devDependencies": {
+    "@vite-pwa/astro": "^1.2.0",
     "vite-tsconfig-paths": "^5.1.4",
     "wasm-pack": "^0.13.1",
     "wrangler": "^4.55.0"
