undo webgpu upgrades - will have to manually sift thru

--- a/src/Cargo.toml
+++ b/src/Cargo.toml
@@ -39,7 +39,7 @@ web-sys = { version = "0.3.69", features = [
 ]}
 
 # WebGPU/WGPU-Rendering
-wgpu = { version = "0.20.0", features = ["webgl", "spirv"] } # Stable and compatible with web-sys 0.3.82
+wgpu = { version = "0.20.0", features = ["webgl", "spirv"] } # Stable and compatible with web-sys 0.3.82 TODO: try out newer version compatible with web-sys.
 
 # 3D-Mathematik
 glam = { version = "0.28.0", features = ["bytemuck"] }
@@ -64,4 +64,4 @@ panic = "abort"     # Remove panic unwinding strings
 strip = true        # Remove symbols
 
 [package.metadata.wasm-pack.profile.release]
-wasm-opt = false      # try updating your wasm-bindgen version in Cargo.toml (currently 0.2.92) or installing a newer version of wasm-pack to see if that resolves the error later.
+wasm-opt = false      # TODO: try updating your wasm-bindgen version in Cargo.toml (currently 0.2.92) or installing a newer version of wasm-pack to see if that resolves the error later.
