--- a/src/Cargo.toml
+++ b/src/Cargo.toml
@@ -38,7 +38,7 @@ web-sys = { version = "0.3.69", features = [
     "CanvasRenderingContext2d"
 ]}
 
-# WebGPU/WGPU-Rendering
+# WebGPU/WGPU-Rendering Todo upgrade
 wgpu = { version = "0.20.0", features = ["webgl", "spirv"] } # Stable and compatible with web-sys 0.3.82
 
 # 3D-Mathematik
@@ -64,4 +64,4 @@ panic = "abort"     # Remove panic unwinding strings
 strip = true        # Remove symbols
 
 [package.metadata.wasm-pack.profile.release]
-wasm-opt = false      # try updating your wasm-bindgen version in Cargo.toml (currently 0.2.92) or installing a newer version of wasm-pack to see if that resolves the error later.
+wasm-opt = false      # Todo: try updating your wasm-bindgen version in Cargo.toml (currently 0.2.92) or installing a newer version of wasm-pack to see if that resolves the error later.
